[gd_scene load_steps=2 format=3 uid="uid://dsjujtwqpp5ob"]

[ext_resource type="Script" path="res://Data/Bug/bug.gd" id="1_3vfp5"]

[node name="Bug" type="Node2D"]
script = ExtResource("1_3vfp5")
BugSize = "Small"

[node name="BugSprite" type="Sprite2D" parent="."]
hframes = 4

[node name="CollisionRay" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
